feat: expose price REST API
